--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ models/
 pytorch-adversarial_box/adversarialbox/__pycache__
 pytorch-adversarial_box/models
 pytorch-adversarial_box/old_info
+.ipynb_checkpoints/
